<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/cardview_light_background"
    app:cardCornerRadius="18dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/cocktail_title"
                style="@style/TagsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cocktail_id"
                style="@style/TagsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/local_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cocktail_title"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_title" />


            <TextView
                android:id="@+id/cocktail_lat"
                style="@style/TagsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/latitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cocktail_id"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_id" />


            <TextView
                android:id="@+id/cocktail_lng"
                style="@style/TagsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/longitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cocktail_lat"
                app:layout_constraintTop_toBottomOf="@+id/cocktail_lat" />



        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>