<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.listscreen.ListFragment">

    <TextView
        android:id="@+id/welcome_text_marquee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        style="@style/TextLabel"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_name_layout"
        style="@style/TextLabel"
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:hint="@string/enter_city_name"
        app:hintEnabled="true"
        app:layout_constraintEnd_toStartOf="@id/fetch_cities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_marquee">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_add_location_24"
            android:fontFamily="@font/almendra"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="@dimen/img_height2"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_error_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fetch_cities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_city"
        app:layout_constraintBottom_toBottomOf="@+id/city_name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/city_name_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cities"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/cities_item"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fetch_cities"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="@string/retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unable_to_fetch_data"
        style="@style/TextLabel"
        android:id="@+id/error_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/parent_layout"
        app:layout_constraintBottom_toBottomOf="@id/parent_layout" />



    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rv_cities">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />

            <include layout="@layout/shimmer_placeholder_layout" />


        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>